flexbox project edits

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I live in Toronto but I prefer spending my down time in the country. I like the quiet of nature (but not the bugs!). Reading on a dock or balcony overlooking calm water is probably my favourite place to be in the world.
             </div>
             <div class="div-2">
-                Div 2
+                My passion is to move. I didn't realize I wanted to be a dancer until I was too old to start. So I've found other ways to dance like hooping, LED poi, belly-dance, ecstatic dance, exercise and hiking.
             </div>
             <div class="div-3">
-                Div 3
+                Fun fact: I lived like a carny for a year in my early 20's; driving across the USA from Michigan to California to work at Renaissance Festivals and sleeping in tents, back-rooms, my car, and other unconventional places.
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
